--- a/hdc_host/index.html
+++ b/hdc_host/index.html
@@ -15,9 +15,63 @@
 
 
 <body>
-    <h1>teste</h1>
+    <div class="container">
+        <div class="navbar-container">
+            <nav>
+                <a href="#">
+                    <img src="img/logo 2.png" alt="logo" class="logo">
+                </a>
 
-    <i class="fas fa-shield-alt"></i>
+                <ul class="navbar-items">
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Preços</a>
+                    </li>
+                    <li>
+                        <a href="#">Contato</a>
+                    </li>
+                    <li>
+                        <a href="#" class="default-btn">Entrar</a>
+                    </li>
+
+                </ul>
+            </nav>
+
+        </div>
+        <main>
+            <div class="main-banner">
+                <h1>HDC Host</h1>
+                <p>Os melhores serviços para projetos de todos os tamanhos!</p>
+            </div>
+            <section class="services-container">
+                <ul>
+                    <li class="fas fa-shield-alt">
+                        <h3>Segurança</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At aut pariatur perferendis
+                            reprehenderit similique, possimus animi sapiente omnis commodi consequatur minima, voluptas
+                            autem ut, reiciendis culpa! Ex incidunt saepe aut.</p>
+                    </li>
+                    <li class="fas fa-rocket">
+                        <h3>Performace</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At aut pariatur perferendis
+                            reprehenderit similique, possimus animi sapiente omnis commodi consequatur minima, voluptas
+                            autem ut, reiciendis culpa! Ex incidunt saepe aut.</p>
+                    </li>
+                    <li class="fas fa-comments">
+                        <h3>Suporte 24/7</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At aut pariatur perferendis
+                            reprehenderit similique, possimus animi sapiente omnis commodi consequatur minima, voluptas
+                            autem ut, reiciendis culpa! Ex incidunt saepe aut.</p>
+                    </li>
+                </ul>
+            </section>
+
+        </main>
+    </div>
+
+
 </body>
 
 </html>
