--- a/hdc_host/index.html
+++ b/hdc_host/index.html
@@ -68,6 +68,62 @@
                 </ul>
             </section>
 
+            <section class="pricing-container">
+
+                <h2>Planos e preços</h2>
+                <p>Selecione o plano que atenda as suas necessidades</p>
+                <div class="plans-container">
+                    <div class="plan">
+                        <ul>
+                            <li class="price">R$15/mês</li>
+                            <li class="plan-name">Básico</li>
+                            <li>2GB de espaço</li>
+                            <li>1 Subdominio</li>
+                            <li>25 contas de e-mail</li>
+                            <li>C-painel</li>
+                            <li>Suporte 24/7</li>
+                            <li class="plan-btn">Saber mais</li>
+                        </ul>
+                    </div>
+                    <div class="plan">
+                        <ul>
+                            <li class="price">R$30/mês</li>
+                            <li class="plan-name">Dedicado</li>
+                            <li>5GB de espaço</li>
+                            <li>10 Subdominio</li>
+                            <li>50 contas de e-mail</li>
+                            <li>C-painel</li>
+                            <li>Suporte 24/7</li>
+                            <li class="plan-btn">Saber mais</li>
+                        </ul>
+                    </div>
+                    <div class="plan">
+                        <ul>
+                            <li class="recommended">R$50/mês</li>
+                            <li class="plan-name">Dedicado Plus</li>
+                            <li>10GB de espaço</li>
+                            <li>10 Subdominio</li>
+                            <li>100 contas de e-mail</li>
+                            <li>C-painel</li>
+                            <li>Suporte 24/7</li>
+                            <li class="plan-btn">Saber mais</li>
+                        </ul>
+                    </div>
+                    <div class="plan">
+                        <ul>
+                            <li class="price">R$100/mês</li>
+                            <li class="plan-name">Cloud</li>
+                            <li>20GB de espaço</li>
+                            <li>20 Subdominio</li>
+                            <li>200 contas de e-mail</li>
+                            <li>C-painel</li>
+                            <li>Suporte 24/7</li>
+                            <li class="plan-btn">Saber mais</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
         </main>
     </div>
 
