Procura de dominio

--- a/hdc_host/index.html
+++ b/hdc_host/index.html
@@ -123,6 +123,16 @@
                     </div>
                 </div>
             </section>
+            <section class="searchdomain-container">
+                <h2>Qual domínio você quer para seu site?</h2>
+                <p>Verifique se o domínio está disponível</p>
+
+                <form>
+                    <input type="text" name="domain" id="domain" placeholder="Domínio desejado">
+                    <input type="submit" value="Procurar domínio">
+                </form>
+
+            </section>
 
         </main>
     </div>
