--- a/hdc_host/index.html
+++ b/hdc_host/index.html
@@ -134,7 +134,22 @@
 
             </section>
 
+            <section class="contact-container">
+                <h2>Mande uma mensagem</h2>
+                <p>Envie a sua mensagem, em ate 4 horas um especialista entrará em contato</p>
+                <form>
+                    <input type="text" name="name" id="name" placeholder="Seu nome">
+                    <input type="email" name="email" id="email" placeholder="Digite o seu e-mail">
+                    <textarea name="message" id="message"
+                        placeholder="Descreva o que você precisa ou o seu projeto..."></textarea>
+                    <input type="submit" value="Enviar">
+                </form>
+            </section>
+
         </main>
+        <footer>
+            <p>HDC Host @ 2025</p>
+        </footer>
     </div>
 
 
