--- a/Flexbox/index.html
+++ b/Flexbox/index.html
@@ -37,6 +37,70 @@
         <div class="box"></div>
     </div>
 
+    <!-- 4 justfy cointent -->
+
+    <h2>center</h2>
+    <div class="center">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+
+    <h2>space around</h2>
+    <div class="space-around">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+
+    <h2>space between</h2>
+    <div class="space-between">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+
+    <h2>end</h2>
+    <div class="end">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+
+
+    <!-- 5 align itens -->
+
+    <h2>center</h2>
+    <div class="align-center">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+
+    <h2>End</h2>
+    <div class="flex-end">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+
+    <h2>stretch</h2>
+    <div class="stretch">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+    <!-- 6 gap -->
+
+    <div class="gap">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+
 </body>
 
 </html>
