--- a/Flexbox/index.html
+++ b/Flexbox/index.html
@@ -17,6 +17,7 @@
         <p>com flex</p>
     </div>
     <!-- 2 column -->
+    <h2>column</h2>
     <div class="flex-column">
         <span>1</span>
         <span>2</span>
@@ -26,6 +27,7 @@
     <!-- 3 wrap -->
 
     <div class="wrap">
+        <h2>wrap</h2>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
@@ -38,7 +40,7 @@
     </div>
 
     <!-- 4 justfy cointent -->
-
+    <h1>justfy cointent</h1>
     <h2>center</h2>
     <div class="center">
         <div class="box"></div>
@@ -69,7 +71,7 @@
 
 
     <!-- 5 align itens -->
-
+    <h2>align itens</h2>
     <h2>center</h2>
     <div class="align-center">
         <div class="box"></div>
@@ -92,6 +94,7 @@
     </div>
     <!-- 6 gap -->
 
+    <h2>gap</h2>
     <div class="gap">
         <div class="box"></div>
         <div class="box"></div>
@@ -101,6 +104,33 @@
         <div class="box"></div>
     </div>
 
+    <!-- 7 order -->
+
+    <h2>Order</h2>
+    <div class="order">
+        <div class="box" id="three">3</div>
+        <div class="box" id="one">1</div>
+        <div class="box" id="two">2</div>
+
+    </div>
+
+    <!-- 8 grow -->
+
+    <h2>Grow</h2>
+    <div class="grow">
+        <div class="box"></div>
+        <div class="box big"></div>
+        <div class="box"></div>
+    </div>
+
+    <!-- 9 basis -->
+
+    <h2>basis</h2>
+    <div class="basis">
+        <div class="box"></div>
+        <div class="box big"></div>
+        <div class="box"></div>
+    </div>
 </body>
 
 </html>
