--- a/Flexbox/index.html
+++ b/Flexbox/index.html
@@ -131,6 +131,14 @@
         <div class="box big"></div>
         <div class="box"></div>
     </div>
+
+    <!-- 10 shrink -->
+    <h2>shrink</h2>
+    <div class="shrink">
+        <div class="box"></div>
+        <div class="box small"></div>
+        <div class="box"></div>
+    </div>
 </body>
 
 </html>
