--- a/Flexbox/index.html
+++ b/Flexbox/index.html
@@ -139,6 +139,23 @@
         <div class="box small"></div>
         <div class="box"></div>
     </div>
+
+    <!-- FLEX SHORTHAND -->
+    <h2>shorthand</h2>
+    <div class="shorthand">
+        <div class="box"></div>
+        <div class="box different"></div>
+        <div class="box"></div>
+    </div>
+
+    <!-- auto alinhamento -->
+    <h2>auto alinhamento</h2>
+    <div class="auto-alignment">
+        <div class="box"></div>
+        <div class="box different"></div>
+        <div class="box"></div>
+    </div>
+
 </body>
 
 </html>
